--- a/app/src/main/res/layout/welcome_screen.xml
+++ b/app/src/main/res/layout/welcome_screen.xml
@@ -13,7 +13,8 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Comenzar Juego"/>
+        android:text="Comenzar Juego"
+        android:onClick="startGame"/>
 
 
 
